crates/ars-components/src/selection/context_menu/snapshots/ars_components__selection__context_menu__tests__context_menu_arrow.snap
---
source: crates/ars-components/src/selection/context_menu/mod.rs
expression: snapshot_attrs(&api.arrow_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "arrow",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "context-menu",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
