crates/ars-components/src/selection/context_menu/snapshots/ars_components__selection__context_menu__tests__context_menu_item_default.snap
---
source: crates/ars-components/src/selection/context_menu/mod.rs
expression: "snapshot_attrs(&api.item_attrs(&key(\"alpha\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "context-menu",
            ),
        ),
        (
            Id,
            String(
                "context-menu-item-alpha",
            ),
        ),
        (
            Role,
            String(
                "menuitem",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
