crates/ars-components/src/selection/context_menu/snapshots/ars_components__selection__context_menu__tests__context_menu_item_group_label.snap
---
source: crates/ars-components/src/selection/context_menu/mod.rs
expression: "snapshot_attrs(&api.item_group_label_attrs(&key(\"group\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-group-label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "context-menu",
            ),
        ),
        (
            Id,
            String(
                "context-menu-group-group-label",
            ),
        ),
    ],
    styles: [],
}
