crates/ars-components/src/selection/context_menu/snapshots/ars_components__selection__context_menu__tests__context_menu_item_text.snap
---
source: crates/ars-components/src/selection/context_menu/mod.rs
expression: "snapshot_attrs(&api.item_text_attrs(&key(\"alpha\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-text",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "context-menu",
            ),
        ),
        (
            Id,
            String(
                "context-menu-item-alpha-text",
            ),
        ),
    ],
    styles: [],
}
