crates/ars-components/src/selection/context_menu/snapshots/ars_components__selection__context_menu__tests__context_menu_positioner.snap
---
source: crates/ars-components/src/selection/context_menu/mod.rs
expression: snapshot_attrs(&api.positioner_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "positioner",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "context-menu",
            ),
        ),
    ],
    styles: [],
}
